--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,8 +19,9 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: |
-          echo @Ancss:https://npm.pkg.github.com/ > build/.npmrc
+          echo @Ancss:registry=https://npm.pkg.github.com/ > build/.npmrc
           echo '//npm.pkg.github.com/:_authToken=${NPM_TOKEN}' >> build/.npmrc
+      - run: cat build/.npmrc
       - run: npm publish
         working-directory: ./build
         env:
