--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: |
-          echo @Ancss:registry=https://npm.pkg.github.com/ > build/.npmrc
+          echo @Ancss:registry=https://npm.pkg.github.com/Ancss > build/.npmrc
           echo '//npm.pkg.github.com/:_authToken=${NPM_TOKEN}' >> build/.npmrc
       - run: cat build/.npmrc
       - run: npm publish
