--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,9 +22,8 @@ jobs:
           echo @Ancss:registry=https://npm.pkg.github.com/ > build/.npmrc
           echo '//npm.pkg.github.com/:_authToken=${NPM_TOKEN}' >> build/.npmrc
       - run: cat build/.npmrc
-      - run: echo "GITHUB_TOKEN=$secrets.GITHUB_TOKEN" >> $GITHUB_ENV
-      - name: Show GitHub token
-        run: echo $GITHUB_TOKEN
+      - run: echo $secrets.GITHUB_TOKEN
+
       - run: npm publish
         working-directory: ./build
         env:
