--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,8 +19,8 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: |
-          echo @Ancss:registry=https://npm.pkg.github.com > build/.npmrc
-          echo '//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}' >> build/.npmrc
+          echo @Ancss:https://npm.pkg.github.com/ > build/.npmrc
+          echo '//npm.pkg.github.com/:_authToken=${NPM_TOKEN}' >> build/.npmrc
       - run: cat build/.npmrc
       - name: Echo token
         run: echo  '${{ secrets.GITHUB_TOKEN }}'
