--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "trailingComma": "es5"
   },
   "keywords": [],
-  "name": "@Ancss/NodeTs-shared",
+  "name": "@ancss/nodets-shared",
   "author": "",
   "repository": {
     "type": "git",
